# StudentGrades

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/application/UserCases/: Usercases.py
src/application/reposotories/: student_grades.py
src/application/services/: aggregation_service.py  importing_service.py
src/domain/: entities.py
src/infrastructure/: consts.py
src/infrastructure/repositories/student_grades/: postgres.py
src/infrastructure/services/: importing_csv_service.py  postgres_aggregation_service.py
src/interfaces/http/: main.py  routes.py  schemas.py
src/interfaces/http/dependencies/: database.py  repositories.py  services.py
src/interfaces/sql/: db.py
tests/: conftest.py  test_domain_entities.py  test_importing_service.py  test_postgres_aggregation_service.py  test_repository.py  test_routes.py  test_usercases.py
