[tool.poetry]
name = "studentgrade"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = ">=0.125.0,<0.126.0"}
asyncpg = ">=0.31.0,<0.32.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39.0"}
python-multipart = ">=0.0.21,<0.0.22"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.21.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"